--- a/assets/pricing.css
+++ b/assets/pricing.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 li {
   font-size: 14px;
   color: #000000;
@@ -16,4 +16,11 @@ li {
 }
 .premium {
   color: white;
+}
+.pricing {
+  padding-top: 50px;
+}
+.table {
+  font-family: 'Kanit', sans-serif;
+  font-size: 50px;
 }
