--- a/assets/spot.css
+++ b/assets/spot.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
 .web1 {
   font-family: 'Kanit', sans-serif;
-  font-size: 20px;
+  font-size: 50px;
   line-height: 80px;
   line-height: 117%;
   align: Center;
@@ -20,4 +20,7 @@
   letter-spacing: -1.5%;
   fill: Solid;
   color: rgba(0, 0, 0, 0.8);
+}
+.spot {
+  padding-top: 50px;
 }
