--- a/assets/spot.css
+++ b/assets/spot.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
 .web1 {
   font-family: 'Kanit', sans-serif;
   font-size: 50px;
@@ -12,9 +13,9 @@
 }
 .web2 {
   font-family: 'Kanit', sans-serif;
-  font-size: 18px;
-  line-height: 30px;
-  line-height: 137%;
+  font-size: 15px;
+  line-height: 40px;
+  line-height: 180%;
   align: Center;
   vertical-align: Top;
   letter-spacing: -1.5%;
@@ -22,5 +23,5 @@
   color: rgba(0, 0, 0, 0.8);
 }
 .spot {
-  padding-top: 50px;
+  padding-top: 60px;
 }
