--- a/assets/contact.css
+++ b/assets/contact.css
@@ -1,3 +1,14 @@
 .contact {
   padding-top: 50px;
 }
+.text10 {
+  width: 50%;
+}
+.text12 {
+  width: 91%;
+  height: 250px;
+}
+.tablecon {
+  margin-top: 40px;
+  margin-left: 40px;
+}
